web/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: Pistisai
spec:
  type: NodePort
  selector:
    app: web
  ports:
  - port: 80
    targetPort: 8080
